Fix font sizes being incorrect when using --force-device-scale-factor.

Normalizes font sizes received from Windows based on the unforced
device scale factor, so that when they're scaled up later they end up
the right sized for the forced scale.

BUG=675933

Review-Url: https://codereview.chromium.org/2695523002
Cr-Commit-Position: refs/heads/master@{#450869}

Former-commit-id: 6cf3aecafe0e4790a0aa0dd8f44602acce121a2e