ui/display/win/dpi.cc
@@ -35,12 +35,6 @@ gfx::Size GetDPI() {
   return gfx::Size(dpi_x, dpi_y);
 }
 
-float GetUnforcedDeviceScaleFactor() {
-  return g_device_scale_factor
-      ? g_device_scale_factor
-      : GetScalingFactorFromDPI(GetDPI().width());
-}
-
 }  // namespace
 
 void SetDefaultDeviceScaleFactor(float scale) {
@@ -52,6 +46,11 @@ float GetDPIScale() {
   if (Display::HasForceDeviceScaleFactor())
     return Display::GetForcedDeviceScaleFactor();
   return GetUnforcedDeviceScaleFactor();
+}
+
+float GetUnforcedDeviceScaleFactor() {
+  return g_device_scale_factor ? g_device_scale_factor
+                               : GetScalingFactorFromDPI(GetDPI().width());
 }
 
 int GetDPIFromScalingFactor(float device_scaling_factor) {
